--- a/index.html
+++ b/index.html
@@ -1,10 +1,100 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Satvik Portfolio</title>
+  <meta charset="UTF-8">
+  <title>Satvik Chaurasia | Portfolio</title>
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background-color: #f4f6f8;
+      color: #333;
+    }
+
+    header {
+      background: #1f2933;
+      color: white;
+      text-align: center;
+      padding: 30px 10px;
+    }
+
+    section {
+      background: white;
+      margin: 20px;
+      padding: 20px;
+      border-radius: 8px;
+    }
+
+    h2 {
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 5px;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    ul li {
+      background: #e5e7eb;
+      display: inline-block;
+      margin: 5px;
+      padding: 8px 12px;
+      border-radius: 5px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 15px;
+      color: #666;
+    }
+  </style>
 </head>
+
 <body>
+
+<header>
   <h1>Satvik Chaurasia</h1>
-  <p>My portfolio website</p>
+  <p>BCA Student | Aspiring Software Developer</p>
+</header>
+
+<section>
+  <h2>About Me</h2>
+  <p>
+    I am a BCA second-year student learning programming and web development.
+    I am building projects to gain practical experience and apply for internships.
+  </p>
+</section>
+
+<section>
+  <h2>Skills</h2>
+  <ul>
+    <li>C</li>
+    <li>C++</li>
+    <li>Python (Basics)</li>
+    <li>HTML</li>
+    <li>CSS</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Projects</h2>
+  <ul>
+    <li>Personal Portfolio Website</li>
+    <li>Python Logic Programs</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Contact</h2>
+  <p>Email: krishchaurasia290@gmail.com</p>
+  <p>LinkedIn: linkedin.com/in/satvik-chaurasia-b280922bb</p>
+</section>
+
+<footer>
+  © 2026 Satvik Chaurasia
+</footer>
+
 </body>
 </html>
