Enhance hero section with typing effect and CTA
Added typing effect and call-to-action links.

Signed-off-by: Satvik077 <krishchaurasia290@gmail.com>

--- a/index.html
+++ b/index.html
@@ -138,8 +138,18 @@
 
 <header>
   <div class="hero">
+    <div class="glow"></div>
+
     <h1>Hi, I’m <span>Satvik Chaurasia</span></h1>
-    <p>BCA Student • Aspiring Software Developer • Building real-world skills</p>
+
+    <p class="typing">
+      <span id="type"></span>
+    </p>
+
+    <div class="cta">
+      <a href="#projects">View Projects</a>
+      <a href="#contact" class="secondary">Contact Me</a>
+    </div>
   </div>
 </header>
 
