--- a/index.html
+++ b/index.html
@@ -132,6 +132,61 @@
         transform: translateY(0);
       }
     }
+     .glow {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  background: radial-gradient(circle, var(--accent), transparent 60%);
+  filter: blur(80px);
+  top: -80px;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0.6;
+  animation: float 6s ease-in-out infinite;
+  z-index: -1;
+}
+
+@keyframes float {
+  0%, 100% { transform: translate(-50%, 0); }
+  50% { transform: translate(-50%, 20px); }
+}
+
+.typing {
+  margin-top: 1.2rem;
+  font-size: 1.1rem;
+  color: var(--muted);
+  min-height: 1.4em;
+}
+
+.cta {
+  margin-top: 2rem;
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.cta a {
+  padding: 0.7rem 1.4rem;
+  border-radius: 999px;
+  text-decoration: none;
+  font-size: 0.95rem;
+  font-weight: 500;
+  background: var(--accent);
+  color: #020617;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.cta a:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 8px 25px rgba(56,189,248,0.4);
+}
+
+.cta .secondary {
+  background: transparent;
+  color: var(--text);
+  border: 1px solid rgba(255,255,255,0.2);
+}
   </style>
 </head>
 <body>
