--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <style>
+     .tech-stack {
+  margin-top: 2.5rem;
+  display: flex;
+  gap: 0.6rem;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.tech-stack span {
+  padding: 0.4rem 0.9rem;
+  font-size: 0.75rem;
+  border-radius: 999px;
+  background: rgba(255,255,255,0.06);
+  color: var(--text);
+  border: 1px solid rgba(255,255,255,0.15);
+  backdrop-filter: var(--blur);
+}
     :root {
       --bg: #0f172a;
       --card: rgba(255, 255, 255, 0.08);
@@ -214,6 +231,12 @@
 <body>
 
 <header>
+   <div class="tech-stack">
+  <span>HTML</span>
+  <span>CSS</span>
+  <span>JavaScript</span>
+  <span>GitHub Pages</span>
+   </div>
   <div class="glow"></div>
 
   <h1>
