--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <title>Satvik Chaurasia | Software Developer</title>
   <meta name="description" content="Satvik Chaurasia portfolio — BCA student and aspiring software developer." />
 
-  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <style>
@@ -18,6 +17,13 @@
       --muted: #94a3b8;
       --accent: #38bdf8;
       --blur: blur(14px);
+    }
+
+    body.light {
+      --bg: #f8fafc;
+      --card: rgba(0,0,0,0.06);
+      --text: #020617;
+      --muted: #475569;
     }
 
     * {
@@ -32,9 +38,8 @@
       color: var(--text);
       line-height: 1.6;
       overflow-x: hidden;
+      transition: background 0.3s ease, color 0.3s ease;
     }
-
-    /* ================= HEADER ================= */
 
     header {
       min-height: 100vh;
@@ -77,9 +82,7 @@
       line-height: 1.2;
     }
 
-    .accent {
-      color: var(--accent);
-    }
+    .accent { color: var(--accent); }
 
     .typing {
       margin-top: 1.2rem;
@@ -107,15 +110,15 @@
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
-    .cta a:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 8px 25px rgba(56,189,248,0.4);
-    }
-
     .cta .secondary {
       background: transparent;
       color: var(--text);
       border: 1px solid rgba(255,255,255,0.25);
+    }
+
+    .cta a:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 8px 25px rgba(56,189,248,0.4);
     }
 
     .tech-stack {
@@ -132,14 +135,12 @@
       border-radius: 999px;
       background: rgba(255,255,255,0.06);
       border: 1px solid rgba(255,255,255,0.15);
-      backdrop-filter: var(--blur);
     }
 
     .scroll {
       margin-top: 3rem;
       font-size: 0.8rem;
       color: var(--muted);
-      opacity: 0.8;
       animation: bounce 1.8s infinite;
     }
 
@@ -148,40 +149,88 @@
       50% { transform: translateY(6px); }
     }
 
-    /* ================= SECTIONS ================= */
-
     section {
-      max-width: 1000px;
+      max-width: 1100px;
       margin: auto;
       padding: 4rem 1.5rem;
     }
 
     h2 {
       font-size: 1.8rem;
-      margin-bottom: 1rem;
+      margin-bottom: 1.5rem;
     }
 
     .card {
       background: var(--card);
-      backdrop-filter: var(--blur);
-      border-radius: 16px;
+      border-radius: 18px;
       padding: 1.5rem;
       border: 1px solid rgba(255,255,255,0.1);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
-    .card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 10px 40px rgba(0,0,0,0.4);
+    /* PROJECTS */
+    .projects-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 1.5rem;
     }
 
-    .skills span {
+    .project-card {
+      background: var(--card);
+      border-radius: 18px;
+      padding: 1.5rem;
+      transition: transform 0.35s ease, box-shadow 0.35s ease;
+    }
+
+    .project-card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 20px 50px rgba(0,0,0,0.4);
+    }
+
+    .project-tags span {
       display: inline-block;
-      margin: 0.3rem;
-      padding: 0.4rem 0.8rem;
+      font-size: 0.7rem;
+      padding: 0.3rem 0.6rem;
       border-radius: 999px;
-      background: rgba(255,255,255,0.12);
-      font-size: 0.9rem;
+      background: rgba(255,255,255,0.1);
+      margin: 0.2rem;
+    }
+
+    .project-links {
+      margin-top: 1rem;
+      display: flex;
+      gap: 0.8rem;
+    }
+
+    .project-links a {
+      flex: 1;
+      text-align: center;
+      padding: 0.5rem;
+      border-radius: 999px;
+      text-decoration: none;
+      font-size: 0.8rem;
+      background: var(--accent);
+      color: #020617;
+    }
+
+    .project-links .secondary {
+      background: transparent;
+      color: var(--text);
+      border: 1px solid rgba(255,255,255,0.25);
+    }
+
+    /* GITHUB */
+    .github {
+      text-align: center;
+    }
+
+    .github a {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.6rem 1.4rem;
+      border-radius: 999px;
+      background: var(--accent);
+      color: #020617;
+      text-decoration: none;
     }
 
     footer {
@@ -191,7 +240,17 @@
       color: var(--muted);
     }
 
-    /* ================= ANIMATIONS ================= */
+    .toggle {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background: var(--card);
+      border-radius: 999px;
+      padding: 0.5rem 0.9rem;
+      cursor: pointer;
+      font-size: 0.8rem;
+      border: 1px solid rgba(255,255,255,0.15);
+    }
 
     .reveal {
       opacity: 0;
@@ -212,15 +271,12 @@
 </head>
 <body>
 
+<div class="toggle" onclick="toggleTheme()">🌙 / ☀️</div>
+
 <header>
   <div class="glow"></div>
-
   <div class="hero">
-    <h1>
-      Hi, I’m <span class="accent">Satvik</span><br />
-      <span class="accent">Chaurasia</span>
-    </h1>
-
+    <h1>Hi, I’m <span class="accent">Satvik</span><br><span class="accent">Chaurasia</span></h1>
     <p class="typing" id="typing"></p>
 
     <div class="cta">
@@ -229,10 +285,7 @@
     </div>
 
     <div class="tech-stack">
-      <span>HTML</span>
-      <span>CSS</span>
-      <span>JavaScript</span>
-      <span>GitHub Pages</span>
+      <span>HTML</span><span>CSS</span><span>JavaScript</span><span>GitHub Pages</span>
     </div>
 
     <div class="scroll">↓ Scroll</div>
@@ -242,29 +295,49 @@
 <section class="reveal">
   <h2>About Me</h2>
   <div class="card">
-    I’m a BCA student focused on building practical software and web projects.
-    I’m strengthening my foundations to prepare for internships and entry-level roles.
-  </div>
-</section>
-
-<section class="reveal skills">
-  <h2>Skills</h2>
-  <div class="card">
-    <span>C</span>
-    <span>C++</span>
-    <span>Python</span>
-    <span>HTML</span>
-    <span>CSS</span>
-    <span>JavaScript</span>
+    I’m a BCA student building practical software and web projects,
+    focused on internships and junior developer roles.
   </div>
 </section>
 
 <section class="reveal" id="projects">
   <h2>Projects</h2>
-  <div class="card">
-    <strong>Personal Portfolio</strong>
-    <p>Modern responsive portfolio built using HTML, CSS & JavaScript.</p>
+  <div class="projects-grid">
+
+    <div class="project-card">
+      <h3>Portfolio Website</h3>
+      <p>Modern responsive portfolio built using HTML, CSS & JS.</p>
+      <div class="project-tags"><span>HTML</span><span>CSS</span><span>JS</span></div>
+      <div class="project-links">
+        <a href="#">Live</a><a href="#" class="secondary">Code</a>
+      </div>
+    </div>
+
+    <div class="project-card">
+      <h3>JavaScript Mini Apps</h3>
+      <p>Logic-based mini apps using DOM manipulation.</p>
+      <div class="project-tags"><span>JS</span><span>HTML</span><span>CSS</span></div>
+      <div class="project-links">
+        <a href="#">Live</a><a href="#" class="secondary">Code</a>
+      </div>
+    </div>
+
+    <div class="project-card">
+      <h3>Python Logic Programs</h3>
+      <p>Beginner-friendly programs for problem solving.</p>
+      <div class="project-tags"><span>Python</span><span>Logic</span></div>
+      <div class="project-links">
+        <a href="#">GitHub</a><a href="#" class="secondary">Details</a>
+      </div>
+    </div>
+
   </div>
+</section>
+
+<section class="reveal github">
+  <h2>GitHub</h2>
+  <p>Check my learning progress and projects on GitHub.</p>
+  <a href="https://github.com/" target="_blank">Visit GitHub</a>
 </section>
 
 <section class="reveal" id="contact">
@@ -275,51 +348,42 @@
   </div>
 </section>
 
-<footer>
-  © 2026 Satvik Chaurasia
-</footer>
+<footer>© 2026 Satvik Chaurasia</footer>
 
 <script>
-  // Scroll reveal
   const reveals = document.querySelectorAll(".reveal");
-  function revealOnScroll() {
-    const h = window.innerHeight;
+  function reveal() {
     reveals.forEach(el => {
-      if (el.getBoundingClientRect().top < h - 80) {
+      if (el.getBoundingClientRect().top < window.innerHeight - 80) {
         el.classList.add("active");
       }
     });
   }
-  window.addEventListener("scroll", revealOnScroll);
-  revealOnScroll();
-</script>
+  window.addEventListener("scroll", reveal);
+  reveal();
 
-<script>
-  // Typing effect
   const roles = [
     "BCA Student • Aspiring Software Developer",
     "Building real-world web projects",
     "Learning JavaScript, HTML & CSS",
-    "Focused on internships & growth"
+    "Open to internships"
   ];
-
-  let i = 0, j = 0, del = false;
-  const target = document.getElementById("typing");
-
-  function type() {
-    if (!target) return;
-    target.textContent = roles[i].slice(0, j);
-
-    if (!del) j++; else j--;
-
-    if (j > roles[i].length + 6) del = true;
-    if (del && j === 0) {
-      del = false;
-      i = (i + 1) % roles.length;
-    }
-    setTimeout(type, del ? 40 : 80);
+  let i=0,j=0,d=false;
+  const t=document.getElementById("typing");
+  function type(){
+    t.textContent=roles[i].slice(0,j);
+    d?j--:j++;
+    if(j>roles[i].length+6)d=true;
+    if(d&&j===0){d=false;i=(i+1)%roles.length;}
+    setTimeout(type,d?40:80);
   }
   type();
+
+  function toggleTheme(){
+    document.body.classList.toggle("light");
+    localStorage.setItem("theme",document.body.classList.contains("light")?"light":"dark");
+  }
+  if(localStorage.getItem("theme")==="light")document.body.classList.add("light");
 </script>
 
 </body>
