--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>Satvik Chaurasia | Software Developer</title>
-  <meta name="description" content="Satvik Chaurasia portfolio — BCA student and aspiring software developer." />
+
+  <meta name="description" content="Satvik Chaurasia portfolio — BCA student and aspiring software developer skilled in C, C++, Python, HTML, CSS, and JavaScript.">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://satvik077.github.io/portfolio-website/">
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
@@ -19,13 +22,6 @@
       --blur: blur(14px);
     }
 
-    body.light {
-      --bg: #f8fafc;
-      --card: rgba(0,0,0,0.06);
-      --text: #020617;
-      --muted: #475569;
-    }
-
     * {
       margin: 0;
       padding: 0;
@@ -34,22 +30,21 @@
     }
 
     body {
-      background: radial-gradient(circle at top, #1e293b, var(--bg));
+      background: radial-gradient(circle at top, #1e293b, #020617);
       color: var(--text);
       line-height: 1.6;
       overflow-x: hidden;
-      transition: background 0.3s ease, color 0.3s ease;
     }
 
     header {
       min-height: 100vh;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       text-align: center;
-      position: relative;
-      overflow: hidden;
       padding: 2rem;
+      position: relative;
     }
 
     .glow {
@@ -59,61 +54,50 @@
       background: radial-gradient(circle, var(--accent), transparent 60%);
       filter: blur(90px);
       top: -100px;
-      left: 50%;
-      transform: translateX(-50%);
       opacity: 0.6;
-      z-index: -1;
       animation: float 6s ease-in-out infinite;
+      z-index: -1;
     }
 
     @keyframes float {
-      0%,100% { transform: translate(-50%, 0); }
-      50% { transform: translate(-50%, 25px); }
-    }
-
-    .hero {
-      max-width: 720px;
-      animation: fadeUp 1.2s ease forwards;
+      0%,100% { transform: translateY(0); }
+      50% { transform: translateY(20px); }
     }
 
     h1 {
-      font-size: clamp(2.2rem, 6vw, 3.2rem);
+      font-size: clamp(2.4rem, 6vw, 3.4rem);
       font-weight: 700;
       line-height: 1.2;
     }
 
-    .accent { color: var(--accent); }
+    .accent {
+      color: var(--accent);
+    }
 
     .typing {
-      margin-top: 1.2rem;
+      margin-top: 1rem;
       font-size: 1.1rem;
       color: var(--muted);
-      min-height: 1.4em;
+      min-height: 1.5em;
     }
 
     .cta {
       margin-top: 2rem;
       display: flex;
       gap: 1rem;
-      justify-content: center;
       flex-wrap: wrap;
+      justify-content: center;
     }
 
     .cta a {
-      padding: 0.7rem 1.4rem;
+      padding: 0.7rem 1.5rem;
       border-radius: 999px;
       text-decoration: none;
       font-size: 0.95rem;
       font-weight: 500;
       background: var(--accent);
       color: #020617;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .cta .secondary {
-      background: transparent;
-      color: var(--text);
-      border: 1px solid rgba(255,255,255,0.25);
+      transition: 0.3s ease;
     }
 
     .cta a:hover {
@@ -121,20 +105,10 @@
       box-shadow: 0 8px 25px rgba(56,189,248,0.4);
     }
 
-    .tech-stack {
-      margin-top: 2rem;
-      display: flex;
-      gap: 0.6rem;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
-
-    .tech-stack span {
-      padding: 0.4rem 0.9rem;
-      font-size: 0.75rem;
-      border-radius: 999px;
-      background: rgba(255,255,255,0.06);
-      border: 1px solid rgba(255,255,255,0.15);
+    .cta .secondary {
+      background: transparent;
+      color: var(--text);
+      border: 1px solid rgba(255,255,255,0.2);
     }
 
     .scroll {
@@ -150,106 +124,38 @@
     }
 
     section {
-      max-width: 1100px;
-      margin: auto;
       padding: 4rem 1.5rem;
+      max-width: 1000px;
+      margin: auto;
     }
 
     h2 {
       font-size: 1.8rem;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1rem;
     }
 
     .card {
       background: var(--card);
-      border-radius: 18px;
+      backdrop-filter: var(--blur);
+      border-radius: 16px;
       padding: 1.5rem;
-      border: 1px solid rgba(255,255,255,0.1);
+      border: 1px solid rgba(255,255,255,0.08);
+      margin-bottom: 1.5rem;
+      transition: 0.3s ease;
     }
 
-    /* PROJECTS */
-    .projects-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 1.5rem;
+    .card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 10px 40px rgba(0,0,0,0.4);
     }
 
-    .project-card {
-      background: var(--card);
-      border-radius: 18px;
-      padding: 1.5rem;
-      transition: transform 0.35s ease, box-shadow 0.35s ease;
-    }
-
-    .project-card:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 20px 50px rgba(0,0,0,0.4);
-    }
-
-    .project-tags span {
+    .skills span {
       display: inline-block;
-      font-size: 0.7rem;
-      padding: 0.3rem 0.6rem;
+      margin: 0.3rem;
+      padding: 0.4rem 0.8rem;
       border-radius: 999px;
-      background: rgba(255,255,255,0.1);
-      margin: 0.2rem;
-    }
-
-    .project-links {
-      margin-top: 1rem;
-      display: flex;
-      gap: 0.8rem;
-    }
-
-    .project-links a {
-      flex: 1;
-      text-align: center;
-      padding: 0.5rem;
-      border-radius: 999px;
-      text-decoration: none;
-      font-size: 0.8rem;
-      background: var(--accent);
-      color: #020617;
-    }
-
-    .project-links .secondary {
-      background: transparent;
-      color: var(--text);
-      border: 1px solid rgba(255,255,255,0.25);
-    }
-
-    /* GITHUB */
-    .github {
-      text-align: center;
-    }
-
-    .github a {
-      display: inline-block;
-      margin-top: 1rem;
-      padding: 0.6rem 1.4rem;
-      border-radius: 999px;
-      background: var(--accent);
-      color: #020617;
-      text-decoration: none;
-    }
-
-    footer {
-      text-align: center;
-      padding: 2rem;
-      font-size: 0.85rem;
-      color: var(--muted);
-    }
-
-    .toggle {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      background: var(--card);
-      border-radius: 999px;
-      padding: 0.5rem 0.9rem;
-      cursor: pointer;
-      font-size: 0.8rem;
-      border: 1px solid rgba(255,255,255,0.15);
+      background: rgba(255,255,255,0.12);
+      font-size: 0.9rem;
     }
 
     .reveal {
@@ -263,81 +169,67 @@
       transform: translateY(0);
     }
 
-    @keyframes fadeUp {
-      from { opacity: 0; transform: translateY(40px); }
-      to { opacity: 1; transform: translateY(0); }
+    footer {
+      text-align: center;
+      padding: 2rem;
+      color: var(--muted);
+      font-size: 0.9rem;
     }
   </style>
 </head>
-<body>
 
-<div class="toggle" onclick="toggleTheme()">🌙 / ☀️</div>
+<body>
 
 <header>
   <div class="glow"></div>
-  <div class="hero">
-    <h1>Hi, I’m <span class="accent">Satvik</span><br><span class="accent">Chaurasia</span></h1>
-    <p class="typing" id="typing"></p>
 
-    <div class="cta">
-      <a href="#projects">View Projects</a>
-      <a href="#contact" class="secondary">Contact Me</a>
-    </div>
+  <h1>
+    Hi, I’m <span class="accent">Satvik</span><br>
+    <span class="accent">Chaurasia</span>
+  </h1>
 
-    <div class="tech-stack">
-      <span>HTML</span><span>CSS</span><span>JavaScript</span><span>GitHub Pages</span>
-    </div>
+  <p class="typing" id="typing"></p>
 
-    <div class="scroll">↓ Scroll</div>
+  <div class="cta">
+    <a href="#projects">View Projects</a>
+    <a href="#contact" class="secondary">Contact Me</a>
   </div>
+
+  <div class="scroll">↓ Scroll</div>
 </header>
 
 <section class="reveal">
   <h2>About Me</h2>
   <div class="card">
-    I’m a BCA student building practical software and web projects,
-    focused on internships and junior developer roles.
+    I’m a BCA student focused on building strong programming fundamentals and modern web projects.
+    My goal is to grow into a professional software developer through consistent learning and real-world practice.
+  </div>
+</section>
+
+<section class="reveal skills">
+  <h2>Skills</h2>
+  <div class="card">
+    <span>C</span>
+    <span>C++</span>
+    <span>Python</span>
+    <span>HTML</span>
+    <span>CSS</span>
+    <span>JavaScript</span>
   </div>
 </section>
 
 <section class="reveal" id="projects">
   <h2>Projects</h2>
-  <div class="projects-grid">
 
-    <div class="project-card">
-      <h3>Portfolio Website</h3>
-      <p>Modern responsive portfolio built using HTML, CSS & JS.</p>
-      <div class="project-tags"><span>HTML</span><span>CSS</span><span>JS</span></div>
-      <div class="project-links">
-        <a href="#">Live</a><a href="#" class="secondary">Code</a>
-      </div>
-    </div>
-
-    <div class="project-card">
-      <h3>JavaScript Mini Apps</h3>
-      <p>Logic-based mini apps using DOM manipulation.</p>
-      <div class="project-tags"><span>JS</span><span>HTML</span><span>CSS</span></div>
-      <div class="project-links">
-        <a href="#">Live</a><a href="#" class="secondary">Code</a>
-      </div>
-    </div>
-
-    <div class="project-card">
-      <h3>Python Logic Programs</h3>
-      <p>Beginner-friendly programs for problem solving.</p>
-      <div class="project-tags"><span>Python</span><span>Logic</span></div>
-      <div class="project-links">
-        <a href="#">GitHub</a><a href="#" class="secondary">Details</a>
-      </div>
-    </div>
-
+  <div class="card">
+    <strong>Personal Portfolio Website</strong>
+    <p>Modern responsive portfolio built with HTML, CSS, and JavaScript.</p>
   </div>
-</section>
 
-<section class="reveal github">
-  <h2>GitHub</h2>
-  <p>Check my learning progress and projects on GitHub.</p>
-  <a href="https://github.com/" target="_blank">Visit GitHub</a>
+  <div class="card">
+    <strong>Python Logic Programs</strong>
+    <p>Beginner-friendly programs to strengthen logic and problem-solving.</p>
+  </div>
 </section>
 
 <section class="reveal" id="contact">
@@ -348,42 +240,52 @@
   </div>
 </section>
 
-<footer>© 2026 Satvik Chaurasia</footer>
+<footer>
+  © 2026 Satvik Chaurasia
+</footer>
 
 <script>
   const reveals = document.querySelectorAll(".reveal");
-  function reveal() {
+  function revealOnScroll() {
+    const h = window.innerHeight;
     reveals.forEach(el => {
-      if (el.getBoundingClientRect().top < window.innerHeight - 80) {
+      if (el.getBoundingClientRect().top < h - 80) {
         el.classList.add("active");
       }
     });
   }
-  window.addEventListener("scroll", reveal);
-  reveal();
+  window.addEventListener("scroll", revealOnScroll);
+  revealOnScroll();
+</script>
 
+<script>
   const roles = [
     "BCA Student • Aspiring Software Developer",
     "Building real-world web projects",
-    "Learning JavaScript, HTML & CSS",
-    "Open to internships"
+    "Learning JavaScript • HTML • CSS",
+    "Focused on internships & growth"
   ];
-  let i=0,j=0,d=false;
-  const t=document.getElementById("typing");
-  function type(){
-    t.textContent=roles[i].slice(0,j);
-    d?j--:j++;
-    if(j>roles[i].length+6)d=true;
-    if(d&&j===0){d=false;i=(i+1)%roles.length;}
-    setTimeout(type,d?40:80);
+
+  let i = 0, j = 0, deleting = false;
+  const speed = 80;
+  const target = document.getElementById("typing");
+
+  function type() {
+    if (!target) return;
+
+    if (!deleting) {
+      target.textContent = roles[i].slice(0, ++j);
+      if (j === roles[i].length + 8) deleting = true;
+    } else {
+      target.textContent = roles[i].slice(0, --j);
+      if (j === 0) {
+        deleting = false;
+        i = (i + 1) % roles.length;
+      }
+    }
+    setTimeout(type, deleting ? speed / 2 : speed);
   }
   type();
-
-  function toggleTheme(){
-    document.body.classList.toggle("light");
-    localStorage.setItem("theme",document.body.classList.contains("light")?"light":"dark");
-  }
-  if(localStorage.getItem("theme")==="light")document.body.classList.add("light");
 </script>
 
 </body>
