Add Google site verification meta tag
Signed-off-by: Satvik077 <krishchaurasia290@gmail.com>

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-google7dd6c426a2f08646.html
+google-site-verification: google7dd6c426a2f08646.html
   <title>Satvik Chaurasia | Software Developer</title>
 
   <meta name="description" content="Satvik Chaurasia portfolio — BCA student and aspiring software developer skilled in C, C++, Python, HTML, CSS, and JavaScript.">
