Add JSON-LD script for personal schema
Added structured data for personal information.

Signed-off-by: Satvik077 <krishchaurasia290@gmail.com>

--- a/index.html
+++ b/index.html
@@ -177,6 +177,20 @@
       font-size: 0.9rem;
     }
   </style>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Satvik Chaurasia",
+  "url": "https://satvik077.github.io/portfolio-website/",
+  "jobTitle": "Aspiring Software Developer",
+  "description": "BCA student and aspiring software developer skilled in HTML, CSS, JavaScript, C, C++, and Python.",
+  "sameAs": [
+    "https://www.linkedin.com/in/satvik-chaurasia-b280922bb",
+    "https://github.com/Satvik077"
+  ]
+}
+  </script>
 </head>
 
 <body>
