Add Open Graph meta tags to index.html
Signed-off-by: Satvik077 <krishchaurasia290@gmail.com>

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <title>Satvik Chaurasia | Software Developer</title>
 
   <meta name="description" content="Satvik Chaurasia portfolio — BCA student and aspiring software developer skilled in C, C++, Python, HTML, CSS, and JavaScript.">
+  <meta property="og:title" content="Satvik Chaurasia | Software Developer" />
+<meta property="og:description" content="BCA student & aspiring software developer building modern web projects." />
+<meta property="og:url" content="https://satvik077.github.io/portfolio-website/" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="https://satvik077.github.io/portfolio-website/preview.png" />
+
+<meta name="robots" content="index, follow" />
+<meta name="googlebot" content="index, follow" />
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://satvik077.github.io/portfolio-website/">
 
