--- a/index.html
+++ b/index.html
@@ -178,11 +178,139 @@
       transform: translateY(0);
     }
 
+    /* Project Card Enhancements */
+    .project-card {
+      background: var(--card);
+      backdrop-filter: var(--blur);
+      border-radius: 16px;
+      padding: 2rem;
+      border: 1px solid rgba(255,255,255,0.08);
+      margin-bottom: 1.5rem;
+      transition: 0.3s ease;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .project-card::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 4px;
+      background: linear-gradient(90deg, var(--accent), #8b5cf6);
+      transform: scaleX(0);
+      transition: transform 0.3s ease;
+    }
+
+    .project-card:hover::before {
+      transform: scaleX(1);
+    }
+
+    .project-card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 12px 50px rgba(56, 189, 248, 0.2);
+      border-color: rgba(56, 189, 248, 0.3);
+    }
+
+    .project-card h3 {
+      font-size: 1.4rem;
+      margin-bottom: 0.8rem;
+      color: var(--accent);
+    }
+
+    .project-card p {
+      color: var(--muted);
+      margin-bottom: 1rem;
+      line-height: 1.6;
+    }
+
+    .project-tech {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem;
+      margin: 1rem 0;
+    }
+
+    .project-tech span {
+      display: inline-block;
+      padding: 0.3rem 0.8rem;
+      border-radius: 999px;
+      background: rgba(56, 189, 248, 0.15);
+      color: var(--accent);
+      font-size: 0.85rem;
+      font-weight: 500;
+    }
+
+    .project-links {
+      display: flex;
+      gap: 1rem;
+      margin-top: 1.5rem;
+      flex-wrap: wrap;
+    }
+
+    .project-links a {
+      padding: 0.6rem 1.2rem;
+      border-radius: 8px;
+      text-decoration: none;
+      font-size: 0.9rem;
+      font-weight: 500;
+      transition: 0.3s ease;
+      display: inline-flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+
+    .btn-primary {
+      background: var(--accent);
+      color: #020617;
+    }
+
+    .btn-primary:hover {
+      background: #0ea5e9;
+      transform: translateY(-2px);
+      box-shadow: 0 6px 20px rgba(56, 189, 248, 0.4);
+    }
+
+    .btn-secondary {
+      background: transparent;
+      color: var(--text);
+      border: 1px solid rgba(255,255,255,0.2);
+    }
+
+    .btn-secondary:hover {
+      background: rgba(255,255,255,0.05);
+      border-color: var(--accent);
+      color: var(--accent);
+    }
+
+    .project-badge {
+      display: inline-block;
+      padding: 0.3rem 0.8rem;
+      border-radius: 999px;
+      font-size: 0.75rem;
+      font-weight: 600;
+      background: linear-gradient(135deg, #10b981, #059669);
+      color: white;
+      margin-bottom: 0.5rem;
+    }
+
     footer {
       text-align: center;
       padding: 2rem;
       color: var(--muted);
       font-size: 0.9rem;
+    }
+
+    @media (max-width: 640px) {
+      .project-links {
+        flex-direction: column;
+      }
+      
+      .project-links a {
+        width: 100%;
+        justify-content: center;
+      }
     }
   </style>
   <script type="application/ld+json">
@@ -207,7 +335,7 @@
   <div class="glow"></div>
 
   <h1>
-    Hi, I’m <span class="accent">Satvik</span><br>
+    Hi, I'm <span class="accent">Satvik</span><br>
     <span class="accent">Chaurasia</span>
   </h1>
 
@@ -224,7 +352,7 @@
 <section class="reveal">
   <h2>About Me</h2>
   <div class="card">
-    I’m a BCA student focused on building strong programming fundamentals and modern web projects.
+    I'm a BCA student focused on building strong programming fundamentals and modern web projects.
     My goal is to grow into a professional software developer through consistent learning and real-world practice.
   </div>
 </section>
@@ -238,33 +366,92 @@
     <span>HTML</span>
     <span>CSS</span>
     <span>JavaScript</span>
+    <span>Chart.js</span>
+    <span>Tailwind CSS</span>
+    <span>Git</span>
   </div>
 </section>
 
 <section class="reveal" id="projects">
-  <h2>Projects</h2>
+  <h2>Featured Projects</h2>
 
-  <div class="card">
-    <strong>Personal Portfolio Website</strong>
-    <p>Modern responsive portfolio built with HTML, CSS, and JavaScript.</p>
+  <!-- Sales Analytics Dashboard - NEW PROJECT -->
+  <div class="project-card">
+    <span class="project-badge">✨ LATEST PROJECT</span>
+    <h3>📊 Sales Analytics Dashboard</h3>
+    <p>
+      Professional real-time analytics dashboard featuring interactive charts, data visualization, 
+      search functionality, and fully responsive design. Built to showcase business intelligence 
+      capabilities with modern web technologies.
+    </p>
+    <div class="project-tech">
+      <span>HTML5</span>
+      <span>CSS3</span>
+      <span>JavaScript</span>
+      <span>Chart.js</span>
+      <span>Tailwind CSS</span>
+    </div>
+    <p style="color: var(--muted); font-size: 0.9rem; margin-top: 1rem;">
+      <strong>Key Features:</strong> Interactive line/bar/pie charts • Real-time data updates • 
+      Order tracking system • Search & filter functionality • Dark mode UI • Mobile responsive
+    </p>
+    <div class="project-links">
+      <a href="https://satvik077.github.io/sales-dashboard/" target="_blank" class="btn-primary">
+        🔗 Live Demo
+      </a>
+      <a href="https://github.com/Satvik077/sales-dashboard" target="_blank" class="btn-secondary">
+        💻 View Code
+      </a>
+    </div>
   </div>
 
-  <div class="card">
-    <strong>Python Logic Programs</strong>
-    <p>Beginner-friendly programs to strengthen logic and problem-solving.</p>
+  <!-- Personal Portfolio -->
+  <div class="project-card">
+    <h3>🎨 Personal Portfolio Website</h3>
+    <p>Modern, responsive portfolio showcasing my journey as a developer with smooth animations and clean design.</p>
+    <div class="project-tech">
+      <span>HTML</span>
+      <span>CSS</span>
+      <span>JavaScript</span>
+    </div>
+    <div class="project-links">
+      <a href="https://satvik077.github.io/portfolio-website/" target="_blank" class="btn-primary">
+        🔗 Live Demo
+      </a>
+      <a href="https://github.com/Satvik077/portfolio-website" target="_blank" class="btn-secondary">
+        💻 View Code
+      </a>
+    </div>
+  </div>
+
+  <!-- Python Projects -->
+  <div class="project-card">
+    <h3>🐍 Python Logic Programs</h3>
+    <p>Collection of beginner-friendly programs designed to strengthen logical thinking and problem-solving skills.</p>
+    <div class="project-tech">
+      <span>Python</span>
+      <span>Algorithms</span>
+      <span>Data Structures</span>
+    </div>
+    <div class="project-links">
+      <a href="https://github.com/Satvik077" target="_blank" class="btn-secondary">
+        💻 View on GitHub
+      </a>
+    </div>
   </div>
 </section>
 
 <section class="reveal" id="contact">
-  <h2>Contact</h2>
+  <h2>Get In Touch</h2>
   <div class="card">
-    <p>Email: krishchaurasia290@gmail.com</p>
-    <p>LinkedIn: linkedin.com/in/satvik-chaurasia-b280922bb</p>
+    <p style="margin-bottom: 0.8rem;">📧 <strong>Email:</strong> <a href="mailto:krishchaurasia290@gmail.com" style="color: var(--accent); text-decoration: none;">krishchaurasia290@gmail.com</a></p>
+    <p style="margin-bottom: 0.8rem;">💼 <strong>LinkedIn:</strong> <a href="https://linkedin.com/in/satvik-chaurasia-b280922bb" target="_blank" style="color: var(--accent); text-decoration: none;">linkedin.com/in/satvik-chaurasia-b280922bb</a></p>
+    <p>💻 <strong>GitHub:</strong> <a href="https://github.com/Satvik077" target="_blank" style="color: var(--accent); text-decoration: none;">github.com/Satvik077</a></p>
   </div>
 </section>
 
 <footer>
-  © 2026 Satvik Chaurasia
+  © 2026 Satvik Chaurasia • Built with 💙 and lots of ☕
 </footer>
 
 <script>
@@ -285,7 +472,7 @@
   const roles = [
     "BCA Student • Aspiring Software Developer",
     "Building real-world web projects",
-    "Learning JavaScript • HTML • CSS",
+    "Creating interactive dashboards & web apps",
     "Focused on internships & growth"
   ];
 
